实现汝瓷主题样式

--- a/ffp-vue/index.html
+++ b/ffp-vue/index.html
@@ -5,6 +5,62 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vite App</title>
+    <style>
+        @font-face {
+            font-family: MapleMonoNormalNL-NF-CN-ExtraLight;
+            src: url('public/fonts/MapleMonoNormalNL-NF-CN-ExtraLight.ttf');
+            font-weight: normal;
+            font-style: normal;
+            font-display: swap;
+        }
+
+        /* 2 */
+        @font-face {
+            font-family: MapleMonoNormalNL-NF-CN-Light;
+            src: url('public/fonts/MapleMonoNormalNL-NF-CN-Light.ttf');
+            font-weight: normal;
+            font-style: normal;
+            font-display: swap;
+        }
+
+        /* 3 */
+        @font-face {
+            font-family: MapleMonoNormalNL-NF-CN-Medium;
+            src: url('public/fonts/MapleMonoNormalNL-NF-CN-Medium.ttf');
+            font-weight: normal;
+            font-style: normal;
+            font-display: swap;
+        }
+
+        /* 4 */
+        @font-face {
+            font-family: MapleMonoNormalNL-NF-CN-Regular;
+            src: url('public/fonts/MapleMonoNormalNL-NF-CN-Regular.ttf');
+            font-weight: normal;
+            font-style: normal;
+            font-display: swap;
+        }
+
+        /* 5 */
+        @font-face {
+            font-family: MapleMonoNormalNL-NF-CN-Thin;
+            src: url('public/fonts/MapleMonoNormalNL-NF-CN-Thin.ttf');
+            font-weight: normal;
+            font-style: normal;
+            font-display: swap;
+        }
+
+        *, *::before, *::after {
+            box-sizing: border-box;
+            font-family: MapleMonoNormalNL-NF-CN-Regular, MapleMonoNormalNL-NF-CN-Light, system-ui;
+            user-select: none;
+            margin: 0;
+            user-drag: none; /* 标准语法 */
+            -webkit-user-drag: none;
+        }
+    </style>
+    <style>
+    </style>
   </head>
   <body>
     <div id="app"></div>
